Update to tabs to ry and fix overflow

--- a/CSS/Components/tabs.css
+++ b/CSS/Components/tabs.css
@@ -12,6 +12,7 @@
   font-weight: 300;
   color: #888;
   -webkit-font-smoothing: antialiased;
+  max-width: 100vw;
 }
 
 .tabs {
